feature: 添加2006题解

--- a/LeetCode/vs/LeetCode.vcxproj.filters
+++ b/LeetCode/vs/LeetCode.vcxproj.filters
@@ -19,5 +19,8 @@
     <ClCompile Include="..\2164.cpp">
       <Filter>LeetCode</Filter>
     </ClCompile>
+    <ClCompile Include="..\2006.cpp">
+      <Filter>LeetCode</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
