--- a/LeetCode/vs/LeetCode.vcxproj
+++ b/LeetCode/vs/LeetCode.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\2006.cpp" />
     <ClCompile Include="..\2164.cpp" />
     <ClCompile Include="..\main.cpp" />
   </ItemGroup>
