--- a/LeetCode/vs/LeetCode.vcxproj
+++ b/LeetCode/vs/LeetCode.vcxproj
@@ -20,8 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\2000.cpp" />
+    <ClCompile Include="..\1105.cpp" />
     <ClCompile Include="..\2006.cpp" />
     <ClCompile Include="..\2164.cpp" />
+    <ClCompile Include="..\393.cpp" />
     <ClCompile Include="..\LeetCode面试\05.01.cpp" />
     <ClCompile Include="..\main.cpp" />
   </ItemGroup>
@@ -153,6 +155,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
